chore: Update mongo config

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://okechukwuchukwuemeka018:CYewqH65NbhuYIZd@cluster0.pksggbo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0&ssl=true
+MONGO_URI=mongodb+srv://okechukwuchukwuemeka018:vam1uIT8tBUjt32A@cluster0.pppxs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CLOUDINARY_CLOUD_NAME=drgizpdgr
 CLOUDINARY_API_KEY=688588972252398
 CLOUDINARY_API_SECRET=vazLpT-vScqo7h0m_hzRVovoKwA
